--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
+    "serve": "http-server src",
     "lint": "eslint .",
     "test": "jest",
     "coverage": "jest --coverage",
@@ -21,18 +22,19 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "babel-jest": "^26.0.1",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.3.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "http-server": "^14.1.1",
     "jest": "^26.0.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
